nginx-nodejs-mysql/istio/canary-deployment.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nodejs
spec:
  hosts:
    - nodejs
  http:
  - route:
    - destination:
        host: nodejs
        subset: v1
      weight: 50
    - destination:
        host: nodejs
        subset: v3
      weight: 50
---
#to test: for i in {1..6}; do curl -si $INGRESS_GATEWAY | grep "<h2>"; done
